// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Button default 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#3F88C5",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#619DCF",
        "color": "#fff",
        "textDecoration": "none",
      },
      "backgroundColor": "#3F88C5",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "14px",
      "fontWeight": 500,
      "lineHeight": 1.52857143,
      "marginBottom": 0,
      "outline": "none",
      "padding": "6px 16px",
      "position": "relative",
      "textAlign": "center",
      "transition": "all .4s ease",
      "userSelect": "none",
      "verticalAlign": "middle",
      "whiteSpace": "nowrap",
    }
  }
  onClick={[MockFunction]}
>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button button with icon only 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#5BC0EB",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#87D1F0",
        "color": "#fff",
        "textDecoration": "none",
      },
      "backgroundColor": "#5BC0EB",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "14px",
      "fontWeight": 500,
      "lineHeight": 1.52857143,
      "marginBottom": 0,
      "outline": "none",
      "padding": "6px 16px",
      "position": "relative",
      "textAlign": "center",
      "transition": "all .4s ease",
      "userSelect": "none",
      "verticalAlign": "middle",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="span"
    css={
      Object {
        "marginLeft": "-4px",
        "marginRight": "-4px",
      }
    }
  >
    <span>
      icon
    </span>
  </EmotionCssPropInternal>
</EmotionCssPropInternal>
`;

exports[`Button disabled button 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#3F88C5",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#619DCF",
        "color": "#fff",
        "textDecoration": "none",
      },
      "backgroundColor": "#3F88C5",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "14px",
      "fontWeight": 500,
      "lineHeight": 1.52857143,
      "marginBottom": 0,
      "outline": "none",
      "padding": "6px 16px",
      "position": "relative",
      "textAlign": "center",
      "transition": "all .4s ease",
      "userSelect": "none",
      "verticalAlign": "middle",
      "whiteSpace": "nowrap",
    }
  }
  disabled={true}
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button large outline button 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "transparent",
          "color": "#3F88C5",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#3F88C5",
        "color": "#fff",
        "textDecoration": "none",
      },
      "backgroundColor": "transparent",
      "backgroundImage": "none",
      "border": "1px solid #3F88C5",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#3F88C5",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "18px",
      "fontWeight": 500,
      "lineHeight": 1.3333333,
      "marginBottom": 0,
      "outline": "none",
      "padding": "10px 16px",
      "position": "relative",
      "textAlign": "center",
      "transition": "all .4s ease",
      "userSelect": "none",
      "verticalAlign": "middle",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button rounded button with icon 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "#D15130",
          "color": "#fff",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#E76846",
        "color": "#fff",
        "textDecoration": "none",
      },
      "backgroundColor": "#D15130",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "20px",
      "boxSizing": "border-box",
      "color": "#fff",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "14px",
      "fontWeight": 500,
      "lineHeight": 1.52857143,
      "marginBottom": 0,
      "outline": "none",
      "padding": "6px 16px",
      "position": "relative",
      "textAlign": "center",
      "transition": "all .4s ease",
      "userSelect": "none",
      "verticalAlign": "middle",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <EmotionCssPropInternal
    __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
    __EMOTION_TYPE_PLEASE_DO_NOT_USE__="span"
    css={
      Object {
        "marginLeft": "-4px",
        "marginRight": "8px",
      }
    }
  >
    <span>
      icon
    </span>
  </EmotionCssPropInternal>
  Test button
</EmotionCssPropInternal>
`;

exports[`Button small text button 1`] = `
<EmotionCssPropInternal
  __EMOTION_LABEL_PLEASE_DO_NOT_USE__="Button"
  __EMOTION_TYPE_PLEASE_DO_NOT_USE__="button"
  css={
    Object {
      ":disabled": Object {
        ":hover": Object {
          "backgroundColor": "transparent",
          "color": "#3F88C5",
        },
        "cursor": "not-allowed",
        "opacity": 0.7,
      },
      ":hover": Object {
        "backgroundColor": "#3F88C5",
        "color": "#fff",
        "textDecoration": "none",
      },
      "backgroundColor": "transparent",
      "backgroundImage": "none",
      "border": "1px solid transparent",
      "borderRadius": "3px",
      "boxSizing": "border-box",
      "color": "#3F88C5",
      "cursor": "pointer",
      "display": "inline-block",
      "fontSize": "12px",
      "fontWeight": 500,
      "lineHeight": 1.5,
      "marginBottom": 0,
      "outline": "none",
      "padding": "4px 10px",
      "position": "relative",
      "textAlign": "center",
      "transition": "all .4s ease",
      "userSelect": "none",
      "verticalAlign": "middle",
      "whiteSpace": "nowrap",
    }
  }
  onClick={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  Test button
</EmotionCssPropInternal>
`;
